# OOP_labs

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt  README.md
lab2/: CMakeLists.txt  README.md
lab3/: CMakeLists.txt  README.md
lab4/: CMakeLists.txt  README.md
lab5/: CMakeLists.txt  README.md
lab6/: CMakeLists.txt  README.md  tests.cpp
lab6/src/: dragon.cpp  knight.cpp  npc.cpp  observer.cpp  princess.cpp
lab7/: CMakeLists.txt  README.md  main.cpp  tests.cpp
lab7/src/: dragon.cpp  knight.cpp  npc.cpp  princess.cpp
